--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,159 @@
-/**CONFIGURATION**/
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    list-style: none;
-}
-
-
-/**Colors**/
-:root{
-    --color_black: #0000;
-    --color_white: #ffff;
-    --color_blue: #0D64E5;
-    --color_red: #EF1414;
-    --color_gray: #E6E4E4;
-    --color_gray_service: #C4C4C4;
-}
-
-ul{
-    margin: 0;
-    padding: 0;
-}
-
-/**Menu**/
-
-nav {
-    height: 80px;
-    width: 100%;
-    background: var(--color_blue);
-}
-
-nav img {
-    width: 80px;
-    background: url("../img/logo.png") none;
-}
-
-.center {
-    padding: 0 4%;
-    margin: 0 auto;
-}
-
-nav ul {
-    float: right;
-    margin-right: 40px;
-}
-
-nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 8px;
-}
-
-nav ul li a {
-    color: var(--color_white);
-    font-size: 18px;
-    padding: 7px 10px;
-    border-radius: 3px;
-    border: 1px solid transparent;
-    text-transform: uppercase;
-}
-
-a.active,
-a:hover {
-    border: 1px solid var(--color_white);
-    transition: .5s;
-}
-
-nav #icon{
-  color: var(--color_white);
-  font-size: 30px;
-  line-height: 80px;
-  float: right;
-  margin-right: 40px;
-  cursor: pointer; 
-  display: none; 
-}
-
-@media (max-width: 1000px) {
-    nav img{
-        width: 40px;
+    /**CONFIGURATION**/
+    
+    @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        outline: none;
+        font-family: "Raleway", sans-serif;
+        text-decoration: none;
+        list-style: none;
     }
-
-    nav ul{
-        margin-right: 20px;
+    /**Colors**/
+    
+     :root {
+        --color_black: #0000;
+        --color_white: #ffff;
+        --color_blue: #0D64E5;
+        --color_red: #EF1414;
+        --color_gray: #E6E4E4;
+        --color_gray_service: #C4C4C4;
     }
-
-    nav a{
-        font-size: 17px;
+    
+    ul {
+        margin: 0;
+        padding: 0;
     }
-}
-
-@media (max-width: 909px){
-    nav #icon{
-        display: block;
-    }
-    nav ul{
-        position: fixed;
+    /**Menu**/
+    
+    nav {
+        height: 110px;
         width: 100%;
-        height: 100vh;
         background: var(--color_blue);
-        top: 80px;
-        left: -100px;
-        text-align: center;
-        transition: all .5s;
     }
-
-    nav li{
-        display: block;
-        margin:  50px 0;
-        line-height: 30px;
+    
+    nav .container {
+        margin-top: 10px;
     }
-
-    nav a{
-        font-size: 20px;
+    
+    nav img {
+        margin-top: 10px;
+        width: 90px;
+        margin-left: 150px;
     }
-    a.active,a:hover{
-        border: none;
-        color: #3498db;
+    
+    .center {
+        padding: 0 4%;
+        margin: 0 auto;
     }
-    nav ul.show{
-        left: 0;
+    
+    nav ul {
+        float: right;
+        margin-right: 40px;
     }
-}
-.carrousel{
-    background: var(--color_red);
-}
+    
+    nav ul li {
+        display: inline-block;
+        line-height: 80px;
+        margin: 20px 8px;
+    }
+    
+    nav ul li a {
+        color: var(--color_white);
+        font-size: 18px;
+        padding: 7px 10px;
+        border-radius: 3px;
+        border: 1px solid transparent;
+        text-transform: uppercase;
+    }
+    
+    a.active,
+    a:hover {
+        border: 1px solid var(--color_white);
+        transition: .5s;
+    }
+    
+    nav #icon {
+        color: var(--color_white);
+        font-size: 30px;
+        line-height: 80px;
+        float: right;
+        margin-right: 40px;
+        cursor: pointer;
+        display: none;
+    }
+    
+    @media (max-width: 1000px) {
+        nav img {
+            width: 40px;
+        }
+        nav ul {
+            margin-right: 20px;
+        }
+        nav a {
+            font-size: 17px;
+        }
+    }
+    
+    @media (max-width: 909px) {
+        nav img {
+            width: 80px;
+            margin-left: 16px;
+        }
+        nav #icon {
+            display: block;
+            background: transparent;
+            border: none;
+            margin-top: 13px;
+        }
+        nav ul {
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            background: var(--color_blue);
+            top: 80px;
+            left: -120%;
+            text-align: center;
+            transition: all .5s;
+        }
+        nav li {
+            display: block;
+            margin: 50px 0;
+            line-height: 30px;
+        }
+        nav a {
+            font-size: 20px;
+        }
+        a.active,
+        a:hover {
+            border: none;
+            color: #3498db;
+        }
+        nav ul.show {
+            left: 0;
+        }
+        header {
+            left: -120%;
+        }
+        header.active {
+            left: 0%;
+        }
+    }
+    
+    @media (max-width: 450px) {
+        html {
+            font-size: 50%;
+        }
+        header {
+            width: 100%;
+            padding: 0px 0px 340px;
+        }
+        .active a {
+            font-size: 1.8rem;
+        }
+    }
+    
+    .carrousel {
+        background: var(--color_red);
+    }
