--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,42 @@
     .who .container .context .container_right .line {
         margin-left: 10px;
     }
+    /**Information**/
+    
+    .number_who {
+        background: var(--color_blue);
+        width: 100%;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+    }
+    
+    .number_who .information {
+        display: flex;
+        text-align: center;
+    }
+    
+    .number_who .information .information_number {
+        padding: 60px;
+        color: var(--color_white);
+    }
+    
+    .number_who .information .information_number h1 {
+        font-size: 60px;
+    }
+    
+    .number_who .information .information_number p {
+        font-size: 22px;
+    }
+    
+    .number_who .information .line-information {
+        height: 50px;
+        width: 3px;
+        margin-top: 99px;
+        background: var(--color_white);
+    }
     
     @media (max-width: 1000px) {
         nav img {
