--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,6 @@
         background: var(--color_gray_service);
     }
     
-    .who .container {}
-    
-    .who .container .context {}
-    
     .who .container .context .container_left {
         float: left;
         margin-left: -127px;
@@ -237,6 +233,40 @@
         width: 3px;
         margin-top: 99px;
         background: var(--color_white);
+    }
+    /**Partners**/
+    
+    .partners {
+        background: var(--color_orange);
+        width: 100%;
+        height: 300px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+    }
+    
+    .partners .title_text {
+        text-align: center;
+    }
+    
+    .partners .title_text .title_h1 {
+        margin-top: 54px;
+    }
+    
+    .partners .logo_partners {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -60px;
+    }
+    
+    .partners .logo_partners .the_partners {
+        padding: 60px;
+        color: var(--color_white);
+    }
+    
+    .partners .logo_partners .the_partners img {
+        width: 110px;
     }
     
     @media (max-width: 1000px) {
