--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
         font-size: 55px;
         text-transform: uppercase;
         margin-bottom: 15px;
+        font-weight: 700;
     }
     
     .line {
@@ -174,7 +175,7 @@
         float: left;
         margin-left: -127px;
         width: 790px;
-        height: 660px;
+        height: 610px;
         background: var(--gradient_layout);
         opacity: 1;
     }
@@ -192,7 +193,7 @@
     .who .container .context .container_right {
         float: right;
         width: 50%;
-        margin-top: -500px;
+        margin-top: -474px;
     }
     
     .who .container .context .container_right .line {
@@ -234,10 +235,23 @@
         margin-top: 99px;
         background: var(--color_white);
     }
+    
+    .services_align {
+        overflow: hidden;
+    }
+    
+    .card-section img {
+        transition: all 0.3s;
+    }
+    
+    .card-section img:hover {
+        transition: all 0.3s;
+        transform: scale(1.1)
+    }
     /**Partners**/
     
     .partners {
-        background: var(--color_orange);
+        background: var(--color_gray_service);
         width: 100%;
         height: 300px;
         align-items: center;
@@ -251,6 +265,15 @@
     
     .partners .title_text .title_h1 {
         margin-top: 54px;
+    }
+    
+    .partners .title_text .partners_text {
+        margin-top: 80px;
+    }
+    
+    .partners .title_text .left {
+        margin-left: 596px;
+        width: 150px;
     }
     
     .partners .logo_partners {
@@ -267,6 +290,27 @@
     
     .partners .logo_partners .the_partners img {
         width: 110px;
+    }
+    /**FAQ**/
+    
+    .faq {
+        margin-top: 70px;
+        width: 100%;
+    }
+    
+    .faq .title_text {
+        text-align: center;
+    }
+    
+    .faq .title_text .left {
+        margin-left: 556px;
+        width: 200px;
+    }
+    
+    .faq .accordion {
+        width: 780px;
+        margin-left: 20%;
+        box-shadow: 0 0 3em var(--color_gray_service);
     }
     
     @media (max-width: 1000px) {
