--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,18 @@
         margin-bottom: 15px;
         font-weight: 700;
     }
+    /**Effects js**/
     
-    .parallax {
-        background-attachment: fixed;
+    .reveal {
+        position: relative;
+        transform: translateY(150px);
+        opacity: 0;
+        transition: all 2s ease;
+    }
+    
+    .reveal.active {
+        transform: translateY(0px);
+        opacity: 1;
     }
     
     .line {
@@ -90,6 +99,7 @@
         text-transform: uppercase;
         text-decoration: none;
         cursor: pointer;
+        transition: 0.5s;
     }
     
     .link.active,
@@ -281,6 +291,57 @@
         transition: all 0.3s;
         transform: scale(1.1)
     }
+    /**Projects**/
+    
+    .services_align .image {
+        cursor: pointer;
+        position: relative;
+        width: 500px;
+    }
+    
+    .services_align .image .image-img {
+        display: block;
+        width: 100%;
+    }
+    
+    .imgOverlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        color: var(--color_white);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: opacity 0.25s;
+    }
+    
+    .imgOverlay>* {
+        transform: translateY(20px);
+        transition: transform 0.25s;
+    }
+    
+    .imgOverlay:hover {
+        opacity: 1;
+    }
+    
+    .imgOverlay:hover>* {
+        transform: translateY(0);
+    }
+    
+    .imgOverlay .imageTitle {
+        font-size: 2em;
+        font-weight: bold;
+    }
+    
+    .imgOverlay .imageTitle .imgDescripton {
+        font-size: 1.25em;
+        margin-top: 8.25em;
+    }
     /**Partners**/
     
     .partners {
@@ -419,7 +480,8 @@
         margin-top: 16px;
         margin-left: 490px;
         cursor: pointer;
-    }    
+    }
+    
     .form .container button:hover {
         background: var(--color_blue);
     }
@@ -528,6 +590,17 @@
     
     .copy p a:hover {
         color: var(--color_green);
+    }
+    /**PROJECTS.HTML**/
+    
+    .title_section {
+        width: 100%;
+        background: var(--color_gray_service);
+        height: 120px;
+    }
+    
+    .title_section .text_right .title_h1 {
+        margin-top: 10px;
     }
     
     @media (max-width: 1000px) {
