--- a/css/style.css
+++ b/css/style.css
@@ -593,14 +593,91 @@
     }
     /**PROJECTS.HTML**/
     
-    .title_section {
+    .back_title {
         width: 100%;
         background: var(--color_gray_service);
-        height: 120px;
+        height: 220px;
     }
     
-    .title_section .text_right .title_h1 {
-        margin-top: 10px;
+    .back_title .title_section {
+        padding: 70px;
+        margin-left: 64px;
+    }
+    
+    .back_title .title_section .text_right .title_h1 {
+        font-size: 44px;
+    }
+    
+    .back_title .title_section .text_right .configure {
+        margin-left: 1px;
+    }
+    
+    .container_text {
+        margin-top: 110px;
+        margin-left: 135px;
+    }
+    
+    .container_text p {
+        width: 500px;
+    }
+    
+    #carouselExampleSlidesOnly {
+        width: 440px;
+        margin-top: 110px;
+        margin-right: 135px;
+        float: right;
+        transition: 0.2s;
+    }
+    
+    #carouselExampleSlidesOnly .carousel-inner .carousel-item img {
+        height: 500px;
+    }
+    
+    .btn_projects {
+        border: 1px solid rgba(0, 0, 0, 0.6);
+        background: var(--color_orange);
+        color: var(--color_white);
+        width: 170px;
+        font-size: 15px;
+        height: 37px;
+        margin-top: 16px;
+        margin-left: 135px;
+        cursor: pointer;
+        text-transform: uppercase;
+        transition: 0.5s;
+    }
+    
+    .btn_projects:hover {
+        background: var(--color_blue);
+    }
+    
+    .social_media_project {
+        float: right;
+        margin-top: 550px;
+        display: flex;
+        margin-right: -160px;
+    }
+    
+    .social_media_project .social_back {
+        background: var(--color_orange);
+        border-radius: 90px;
+        border-style: none;
+        width: 40px;
+        height: 40px;
+        margin-right: 15px;
+        margin-top: -20px;
+        text-align: center;
+        transition: .4s;
+    }
+    
+    .social_media_project .social_back:hover {
+        background: var(--color_blue);
+    }
+    
+    .social_media_project .social_back i {
+        color: var(--color_white);
+        font-size: 26px;
+        margin-top: 6px;
     }
     
     @media (max-width: 1000px) {
